Fix start button on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -89,6 +89,11 @@
 
 @media only screen and (max-width: 800px) {
 
+  .button-know-me{
+    width: 20vh;
+    height: 20vh;
+    font-size: 2.5vh;
+  }
   .container-content{
     display: flex;
     flex-direction: column;
